# rottenpotatoes

./: .flaskenv  .gitignore  404.html  README.md  application.py  index.html  manage.py  pyproject.toml  sitemap.xml
.azure/: config
.github/workflow/: main.yml
.github/workflows/: deploy_app_azure_web_app.yml  deploy_docs_gitpages.yml  main_green-wave-a6e316b5d8f04194b6ca148a95d18bad.yml
about/: index.html
app/: app.py  auth.py  cli_cmds.py  config.py  seed.py  test.sqlite3  webapp.py
app/api/: __init__.py  reviews.py
app/auth/: __init__.py  controller.py  forms.py  loaders.py  oath.py  oauth_controller.py  profile_controller.py  pwd_auth_controller.py  register_service.py  session_controller.py
app/controllers/: __init__.py  mail.py  main.py  movies_controllers.py  reviews_controller.py  users_controllers.py
app/helpers/: form_view.py  get_fields.py  standard_paths.py
app/models/: __init__.py  credential.py  movie.py  moviegoer.py  principal.py  review.py  user.py
app/static/: style.css
app/templates/: base.html  base.jinja2  index.html  index.jinja2
dev_tools/: index.html
docs/: about.md  dev_tools.md  index.html  index.md  project_structure.md
docs/setup_logs/: step0_development_env.md  step10_twitter_bootstrap.md  step11_setup_blueprint_and_auth_structure.md  step12_wtform.md  step13_sqlalchemy.md  step14_flask_login.md  step15_debug.md  step16_create_a_crud.md  step17_movies_crud.md  step18_movies_crud.md  step19_config_env.md  step1_initial_project_setup.md  step20_oauth.md  step21_setup_api_with_swagger.md  step2_setup_docs.md  step3_init_repo.md  step4_setup_an_initial_application.md  step5_check_vscode.md  step6_setup_docs_publish.md  step7_deployment.md  step8_ci_cd.md  step9_config_crud_gen.md
migrations/versions/: 5007adb40bcd_initial_migration.py
project_structure/: index.html
search/: search_index.json
setup_logs/step0_development_env/: index.html
setup_logs/step10_twitter_bootstrap/: index.html
setup_logs/step11_setup_blueprint_and_auth_structure/: index.html
setup_logs/step12_wtform/: index.html
setup_logs/step13_sqlalchemy/: index.html
setup_logs/step14_flask_login/: index.html
tests/: test_app_creation.py  test_parser.py  test_test.py
(+36 files in other folders)
